tests/miniJava/neg/006154_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { return System.out.println ( { } ) ; } }
